@@ -1,8 +1,7 @@
 package org.dev.quickshortapi.domain;
 
 import java.net.MalformedURLException;
-import java.net.URISyntaxException;
-import java.net.URL;
+import java.net.URI;
 import java.util.Date;
 
 public class Url {
@@ -62,9 +61,9 @@ public class Url {
 
     public boolean isValidUrl() {
         try {
-            new URL(this.originalUrl).toURI();
+            URI.create(originalUrl).toURL();
             return true;
-        } catch (MalformedURLException | URISyntaxException e) {
+        } catch (MalformedURLException | IllegalArgumentException e) {
             return false;
         }
     }
